# wazm

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build_and_test.yml
src/lib/: analysis.rs  compress.rs  decompress.rs  errors.rs  lib.rs  parse.rs
tests/: tools.rs
tests/test_files/: compare_switch.wasm  hello_web.wat
wazm/: Cargo.toml
