[package]
name = "wazm"
description = "Compressor/Decompressor for web assembly"
version = "0.1.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
license-file = "LICENSE"
#documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
#homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/wazm"
readme = "README.md"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "wazm"
path = "src/lib/lib.rs"

[[bin]]
name = "wazm"
path = "src/bin/wazm/main.rs"

[dependencies]
clap = "~4"
log = "0.4.18"
env_logger = "0.10.0"
error-chain = "0.12.2"
wasmparser = "0.107.0"

[dev-dependencies]
wax = "0.5.0"
